<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/almost_there"
        android:textSize="40sp"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:text="@string/thank_you"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:text="@string/steps"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:text="@string/to_activate"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:background="@drawable/button_verify_custom">
    </TextView>

</LinearLayout>