<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/arrow_left"
                android:drawablePadding="40dp"
                android:background="@drawable/header">
            </TextView>

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/username">
            </EditText>

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/email">
            </EditText>

            <EditText
                android:id="@+id/editText_nohp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/nohp">
            </EditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Male"
                    android:textSize="20dp"
                    android:drawableLeft="@drawable/ic_register_radio_on"
                    android:drawablePadding="15dp">
                </TextView>

                <TextView
                    android:id="@+id/radio_female"
                    android:layout_toRightOf="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="@string/female"
                    android:textSize="20sp"
                    android:drawableLeft="@drawable/ic_register_radio_off"
                    android:drawablePadding="15dp">
                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/dropdown_menu_bloodType"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:hint="@string/blood_type"
                    android:drawableRight="@drawable/ic_arrow_dropdown"
                    android:drawablePadding="30dp">
                </EditText>

                <EditText
                    android:id="@+id/dropdown_menu_reshus"
                    android:layout_toRightOf="@+id/dropdown_menu_bloodType"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginStart="40dp"
                    android:hint="@string/reshus"
                    android:drawableRight="@drawable/ic_arrow_dropdown"
                    android:drawablePadding="30dp">
                </EditText>
            </RelativeLayout>

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password">
            </EditText>

            <EditText
                android:id="@+id/editText_password2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/retype_pass">
            </EditText>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/radio_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_register_radio_on"
                    android:drawablePadding="15dp">
                </TextView>

                <TextView
                    android:id="@+id/radio_organization"
                    android:layout_toRightOf="@+id/radio_personal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/organization"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/ic_register_radio_off"
                    android:drawablePadding="15dp">
                </TextView>
            </RelativeLayout>

            <EditText
                android:id="@+id/dropdown_menu_job"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                android:hint="@string/job"
                android:drawableRight="@drawable/ic_arrow_dropdown"
                android:drawablePadding="30dp">
            </EditText>

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/address">
            </EditText>

            <EditText
                android:id="@+id/editText_location"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:hint="@string/default_location"
                android:drawableRight="@drawable/ic_blood_needed_location">
            </EditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                android:drawableLeft="@drawable/ic_setting_radio_on"
                android:drawablePadding="20dp"
                android:text="@string/agree">
            </TextView>

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="@color/lightBlue"
                android:textSize="15dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:background="@drawable/button_register_custom">
            </TextView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>