<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verify_account"
        android:textSize="30sp"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:layout_marginHorizontal="50dp"
        android:text="@string/we_have"
        android:textColor="@color/white">
    </TextView>

    <EditText
        android:id="@+id/editText_code"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:hint="@string/enter_code"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white">
    </EditText>

    <TextView
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:background="@drawable/button_verify_custom">
    </TextView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/resend1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:text="@string/resend1"
            android:textColor="@color/white"
            android:textSize="14sp">
        </TextView>

        <TextView
            android:id="@+id/resend2"
            android:layout_toRightOf="@+id/resend1"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/resend2"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold">
        </TextView>
    </RelativeLayout>

</LinearLayout>