<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/ic_header_profile"
            android:outlineSpotShadowColor="@color/black"
            android:elevation="12dp">
        </ImageView>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_side_menu"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:elevation="13dp">
        </ImageView>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_notification"
            android:layout_marginStart="352dp"
            android:layout_marginTop="15dp"
            android:elevation="13dp">
        </ImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/dsc_0012_cir"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:elevation="12dp"
            app:border_color="@color/white"
            app:border_width="5dp">
        </de.hdodenhof.circleimageview.CircleImageView>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="22sp"
        android:textColor="@color/lightBlue"
        android:textStyle="bold">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/blood_type_desc"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold">
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/space">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blood_give_num"
                android:textColor="@color/lightBlue"
                android:textSize="30sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blood_give"
                android:textSize="11sp"
                android:textAllCaps="true">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blood_received_num"
                android:textColor="@color/lightBlue"
                android:textSize="30sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/blood_received"
                android:textSize="11sp"
                android:textAllCaps="true">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thanks_num"
                android:textColor="@color/lightBlue"
                android:textSize="30sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thanks"
                android:textSize="11sp"
                android:textAllCaps="true">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/space">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="140dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_search_donor">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_donor"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_donor_desc"
                android:textSize="11sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="140dp"
            android:layout_marginLeft="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_blood_needed">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="10dp"
                android:text="@string/blood_needed"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blood_needed_desc"
                android:textSize="11sp">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="140dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_message">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_desc"
                android:textSize="11sp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="115dp"
            android:layout_height="140dp"
            android:layout_marginLeft="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_donor_history">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawablePadding="10dp"
                android:text="@string/donor_history"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp">
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor_history_desc"
                android:textSize="11sp">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>